jumping quantity buttons problem fixed

--- a/src/components/ProductPage.css
+++ b/src/components/ProductPage.css
@@ -13,32 +13,36 @@
 
 .product-quant {
 	width: 100%;
-	display: flex;
-	align-items: center;
-
+	font-size: 1.5rem;
 }
 
 .quant-container {
-	padding: 0 3.1rem;
+	position: relative;
+	top: 2.2rem;
+	width: fit-content;
+	padding: 0 2.5rem;
+
 }
 
 .price-container {
-	text-align: end;
-	padding-left: 5rem;
+	float: right;
+	position: relative;
+	bottom: 2.2rem;
+	width: fit-content
 }
 
 .big-img {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 80%;
+	height: 75%;
 	overflow: hidden;
 	padding: 1rem;
 }
 
 .big-img img {
 	object-fit: cover;
-	width: 75%;
+	height: 100%;
 }
 
 .small-imgs {
@@ -128,6 +132,7 @@
 	background-color: black;
 	color: white;
 	border: none;
+
 }
 
 .count-number {
